--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "mongoose": "^5.13.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
     "nodemon": "^1.19.4"
   },
   "repository": {
